--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -102,8 +102,6 @@
 
 @media (max-width: 530px) {
   .nav-bar {
-    width: 600px;
-
     button {
       display: block;
       position: absolute;
