--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
-html {
-  font-size: 62.5%
-}
-
-body {
+ body {
   margin: 0;
   font-family: 'Barlow Condensed', sans-serif;
   color: hsl(0 0% 100%);
   background: hsl(230 35% 7%);
+  overflow-x: hidden;
+  width:100%;
 }
